modified js and html

--- a/msPlayer.html
+++ b/msPlayer.html
@@ -13,6 +13,7 @@
     <div class="container">
         <div class="control">
             <div class="title-time">
+                <!-- info of default song -->
                 <h2>Hello</h2>
                 <h4 class="artist">Adele</h4>
                 <h4 class="time">0:00</h4>
